# LabsFunctional

./: README.md
lab1/: Database.hs  Main.hs  Models.hs  Operations.hs  sports-system.cabal
lab2/: Archive.hs  Benchmark.hs  Compression.hs  Huffman.hs  Main.hs  huffman-compression.cabal
lab3/: Main.hs  TextProcessing.hs  Types.hs  text-processor.cabal
