cabal-version:      3.0
name:               sports-system
version:            0.1.0.0
build-type:         Simple

executable sports-system
  main-is:            Main.hs
  other-modules:      Models
                      Database
                      Operations
  build-depends:      base >= 4.14 && < 5
                    , mysql-simple >= 0.4
                    , text >= 1.2
                    , bytestring >= 0.11
                    , time >= 1.9
                    , aeson >= 2.0
  default-language:   Haskell2010
  ghc-options:        -Wall

