cabal-version:      3.0
name:               huffman-compression
version:            0.1.0.0
build-type:         Simple

executable huffman-compression
  main-is:            Main.hs
  other-modules:      Huffman
                      Compression
                      Archive
                      Benchmark
  build-depends:      base >= 4.14 && < 5
                    , bytestring >= 0.11
                    , containers >= 0.6
                    , binary >= 0.8
                    , directory >= 1.3
                    , filepath >= 1.4
                    , time >= 1.9
                    , deepseq >= 1.4
                    , parallel >= 3.2
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

