cabal-version:      3.0
name:               text-processor
version:            0.1.0.0
build-type:         Simple

executable text-processor
  main-is:            Main.hs
  other-modules:      Types
                      TextProcessing
  build-depends:      base >= 4.14 && < 5
                    , text >= 1.2
                    , bytestring >= 0.11
                    , containers >= 0.6
  default-language:   Haskell2010
  ghc-options:        -Wall

